MGMT-2073 - update cluster/host state machine for day 2
